# duplicates

./: CMakeLists.txt  main.cpp
core/: File.cpp  File.h  Log.h  Stats.cpp  Stats.h  Visitor.cpp  Visitor.h
gui/: DirectoryDialog.cpp  DirectoryDialog.h  GuiConstants.h  MainWindow.cpp  MainWindow.h
